Fix button spacing in footer.

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -7,8 +7,8 @@ button {
 
 .button {
   display: inline-block;
-  min-width: 140px;
-  padding: 15px 10px;
+  min-width: 120px;
+  padding: 12px 10px;
   border: 1px solid transparent;
   border-radius: 4px;
   background-color: $blue;
